--- a/website/index.html
+++ b/website/index.html
@@ -2,9 +2,50 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hello!</title>
+	<title>Assignment Solution for Module 2</title>
+	<link href="styles.css" rel="stylesheet">
+
 </head>
+
 <body>
-<h1>Hello, world! Have a nice day!</h1>
+
+<h1>
+	<div class="page_main_title">Our menu</div>
+</h1>
+<div id="position-centered">
+
+	<!--Chicken menu-->
+
+	<div id="p1">
+
+		<h3 id = "header1">Chicken </h3>
+
+	<p>P1 Taste our very requested and loved chicken burger with a spicy ceddar slice of melted cheese, iceberg salad and fresh tomatoes as vegetables, crisp bacon and a soft cocktail sauce with a hint of mayo. </p>
+
+	</div>
+
+	<!--Beef menu-->
+
+	<div id="p2">
+
+		<h3 id="header2">Beef</h3>
+
+	<p>P2 No one ever went wrong with the classic beef burger and that's why we took it to the next level. Medium-rare beef with two slices of gouda cheese and some roasted mushrooms. Tasty sauce included. </p>
+
+	</div>
+
+	<!--Sushi menu-->
+
+	<div id="p3">
+
+		<h3 id="header3">Sushi</h3>
+
+	<p>P3 For the fish lovers we decided that sushi is better than salmon burgers, right? Order our salmon skin roll variety of sushi with the best soy sauce on the market. You won't regret it.</p>
+
+	</div>
+
+</div>
+
+
 </body>
 </html>
