--- a/website/index.html
+++ b/website/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, inital-scale=1">
+	
 	<title>Assignment Solution for Module 2</title>
 	<link href="styles.css" rel="stylesheet">
 
